# WDS_proj

./: .gitignore  .gitmodules  README.md  TASKS.md
desktop_application/: .gitignore  CMakeLists.txt  compile_commands.json  main.cpp
desktop_application/dox/: Doxyfile
desktop_application/inc/: MainWindow.hpp  SensorLink.hpp
desktop_application/src/: MainWindow.cpp  SensorLink.cpp
electronics_schema/: .gitignore  electronics_schema.kicad_pcb  electronics_schema.kicad_prl  electronics_schema.kicad_pro  electronics_schema.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
electronics_schema/Libraries/ProjectLib/: plane_lib.bak  plane_lib.kicad_sym
electronics_schema/Libraries/ProjectLib/plane_lib.pretty/: GY-GPS6MV2.kicad_mod  modGY-87.kicad_mod
electronics_schema/Libraries/RP-Pico Libraries/MCU_RaspberryPi_and_Boards.pretty/: RPi_Pico_SMD_TH.kicad_mod
hardware_application/: .gitignore  BUILD.md  CMakeLists.txt  main.c
hardware_application/doc/: Doxyfile
hardware_application/inc/: common.h  imu.h  lwipopts.h  tcp_api_implementation.h  tcp_handling.h  tcp_typedefs.h  udp_discovery.h
hardware_application/lib/: CMakeLists.txt
hardware_application/src/: imu.c  tcp_api_implementation.c  tcp_handling.c  tcp_typedefs.c  udp_discovery.c
mcu_emulator/: mcu_emulator.py
